--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -5,6 +5,24 @@
   <title>Basketball Team Signup</title>
  </head>
  <body>
+   <h1>Create a Basketball Team!</h1>
+   <form>
+     <label for="team_name">Team Name:</label>
+     <input type="text" name="team_name">
+     <label for="coach">Coach:</label>
+     <input type="text" name="coach">
+     <label for="point_guard">Point Guard:</label>
+     <input type="text" name="point_guard">
+     <label for="shooting_guard">Shooting Guard:</label>
+     <input type="text" name="shooting_guard">
+     <label for="small_forward">Small Forward:</label>
+     <input type="text" name="small_forward">
+     <label for="power_forward">Power Forward:</label>
+     <input type="text" name="power_forward">
+     <label for="center">Center:</label>
+     <input type="text" name="center">
+     <input type="submit" name="Submit" id="Submit">
+   </form>
  </body>
 </html>
 
