Automatically backed up by Learn

--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -21,7 +21,7 @@
      <input type="text" name="power_forward">
      <label for="center">Center:</label>
      <input type="text" name="center">
-     <input type="submit" name="Submit" id="Submit">
+     <input type="submit" value="Submit" id="Submit">
    </form>
  </body>
 </html>
