--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -6,7 +6,7 @@
  </head>
  <body>
    <h1>Create a Basketball Team!</h1>
-   <form method="POST" action="/team.rb">
+   <form method="POST" action="/team">
      <label for="team_name">Team Name:</label>
      <input type="text" name="team_name" id="team_name">
      <br><br>
