--- a/views/team.erb
+++ b/views/team.erb
@@ -5,7 +5,9 @@
   <title>Basketball Team</title>
  </head>
  <body>
-    <h1><% @team %></h1>
+    <% @team.each do |k, v| %>
+      <h2><% "#{k} - #{v}" %></h2>
+    <% end %>
 
 
  </body>
