--- a/views/team.erb
+++ b/views/team.erb
@@ -5,11 +5,13 @@
   <title>Basketball Team</title>
  </head>
  <body>
-    <% @team.each do |k, v| %>
-      <h2><% v %></h2>
-    <% end %>
-
-
+    <h1>Team Name: <%= @team_name %></h1>
+    <h2>Coach: <%= @coach %></h2>
+    <h2>Point Guard: <%= @point_guard %></h2>
+    <h2>Shooting Guard: <%= @shooting_guard %></h2>
+    <h2>Small Forward: <%= @small_forward %></h2>
+    <h2>Power Forward: <%= @power_forward %></h2>
+    <h2>Center: <%= @center %></h2>
  </body>
 </html>
 
