--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -7,7 +7,7 @@
  <body>
    <h1>Create a Basketball Team!</h1>
    <form method="POST" action="/team">
-     <label for="team_name">Team Name:</label>
+     <label for="name">Team Name:</label>
      <input type="text" name="team_name" id="team_name">
      <br><br>
      <label for="coach">Coach:</label>
