--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -8,7 +8,7 @@
    <h1>Create a Basketball Team!</h1>
    <form method="POST" action="/team">
      <label for="name">Team Name:</label>
-     <input type="text" name="team_name" id="team_name">
+     <input type="text" name="name" id="team_name">
      <br><br>
      <label for="coach">Coach:</label>
      <input type="text" name="coach" id="coach">
