--- a/views/team.erb
+++ b/views/team.erb
@@ -7,7 +7,7 @@
  <body>
     <h1>Team Name: <%= @team["name"] %></h1>
     <h2>Coach: <%= @team["coach"] %></h2>
-    <h2>Point Guard: <%= @team["point_guard"] %></h2>
+    <h2>Point Guard: <%= @team["pg"] %></h2>
     <h2>Shooting Guard: <%= @team["shooting_guard"] %></h2>
     <h2>Small Forward: <%= @team["small_forward"] %></h2>
     <h2>Power Forward: <%= @team["power_forward"] %></h2>
