--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -13,8 +13,8 @@
      <label for="coach">Coach:</label>
      <input type="text" name="coach" id="coach">
      <br><br>
-     <label for="point_guard">Point Guard:</label>
-     <input type="text" name="point_guard" id="point_guard">
+     <label for="pg">Point Guard:</label>
+     <input type="text" name="pg" id="pg">
      <br><br>
      <label for="shooting_guard">Shooting Guard:</label>
      <input type="text" name="shooting_guard" id="shooting_guard">
