--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -16,8 +16,8 @@
      <label for="pg">Point Guard:</label>
      <input type="text" name="pg" id="pg">
      <br><br>
-     <label for="shooting_guard">Shooting Guard:</label>
-     <input type="text" name="shooting_guard" id="shooting_guard">
+     <label for="sg">Shooting Guard:</label>
+     <input type="text" name="sg" id="sg">
      <br><br>
      <label for="small_forward">Small Forward:</label>
      <input type="text" name="small_forward" id="small_forward">
