--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -19,11 +19,11 @@
      <label for="sg">Shooting Guard:</label>
      <input type="text" name="sg" id="sg">
      <br><br>
-     <label for="small_forward">Small Forward:</label>
-     <input type="text" name="small_forward" id="small_forward">
+     <label for="sf">Small Forward:</label>
+     <input type="text" name="sf" id="sf">
      <br><br>
-     <label for="power_forward">Power Forward:</label>
-     <input type="text" name="power_forward" id="power_forward">
+     <label for="pf">Power Forward:</label>
+     <input type="text" name="pf" id="pf">
      <br><br>
      <label for="center">Center:</label>
      <input type="text" name="center" id="center">
