--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -25,8 +25,8 @@
      <label for="pf">Power Forward:</label>
      <input type="text" name="pf" id="pf">
      <br><br>
-     <label for="center">Center:</label>
-     <input type="text" name="center" id="center">
+     <label for="c">Center:</label>
+     <input type="text" name="c" id="c">
      <br><br>
      <input type="submit" value="Submit" id="Submit">
    </form>
