--- a/views/team.erb
+++ b/views/team.erb
@@ -11,7 +11,7 @@
     <h2>Shooting Guard: <%= @team["sg"] %></h2>
     <h2>Small Forward: <%= @team["sf"] %></h2>
     <h2>Power Forward: <%= @team["pf"] %></h2>
-    <h2>Center: <%= @team["center"] %></h2>
+    <h2>Center: <%= @team["c"] %></h2>
  </body>
 </html>
 
